# pyOutfit

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
1.0.0/: 404.html  index.html  objects.inv  sitemap.xml
1.0.0/api/: index.html
1.0.0/api/iod_gauss/: index.html
1.0.0/api/iod_params/: index.html
1.0.0/installation/: index.html
1.0.0/quickstart/: index.html
1.0.0/search/: search_index.json
api/: index.html
api/iod_gauss/: index.html
api/iod_params/: index.html
api/observations/: index.html
api/observer/: index.html
api/pandas_pyoutfit/: index.html
api/py_outfit/: index.html
api/trajectories/: index.html
docs/: index.md  quickstart.md
docs/tutorials/: pyoutfit_environment.md
installation/: index.html
py_outfit/: __init__.py  __init__.pyi  iod_gauss.pyi  iod_params.pyi  observations.pyi  observer.pyi  pandas_pyoutfit.py  py_outfit.pyi  trajectories.pyi
py_outfit/orbit_type/: cometary.pyi  equinoctial.pyi  keplerian.pyi
quickstart/: index.html
search/: search_index.json
src/: iod_gauss.rs  iod_params.rs  lib.rs  observations.rs  observer.rs  trajectories.rs
src/orbit_type/: cometary.rs  equinoctial.rs  mod.rs
tests/: conftest.py  test_orbit_type.py  test_trajectory_set.py
tutorials/iod_params/: index.html
tutorials/orbit_results/: index.html
tutorials/pandas_tuto/: index.html
tutorials/pyoutfit_environment/: index.html
tutorials/trajectories_tuto/: index.html
tutorials/tutorial_snippets/: trajectories_estimate_all.py
(+24 files in other folders)
