[package]
name = "pyOutfit"
version = "0.1.0"
edition = "2021"

[lib]
name = "py_outfit"

crate-type = ["cdylib"]

[dependencies]
outfit = { version = "2.0.0", path = "/home/roman/Documents/Programmation/Rust/Outfit", features = [
    "jpl-download", "progress", "parallel"
] }
numpy = { version = "0.26.0", default-features = false }
pyo3 = { version = "0.26", features = ["extension-module"] }
rand = { version = "0.9.2", default-features = false, features = ["std_rng", "os_rng"] }
