[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "pyOutfit"
version = "1.0.0"
description = "Default template for PDM package"
authors = [{ name = "FusRoman", email = "roman.le-montagner@ijclab.in2p3.fr" }]
dependencies = ["maturin>=1.9.4", "pip>=25.2", "numpy>=2.3.3", "pandas>=2.3.2", "astropy>=7.1.0", "pyarrow>=21.0.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "CeCILL-C" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "pytest>=8.4.2",
]
